<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.shiva.tissueanalyticsassignment.DetailActivity">

    <!--Layout to display Site name-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

            <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="8dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/sitename" />

            <TextView
            android:id="@+id/tv_sitename"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"/>
        </LinearLayout>

    <!--Layout to display Site code-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

            <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/sitecode"/>

             <TextView
            android:id="@+id/tv_sitecode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
        </LinearLayout>

    <!--Layout to display Minimum value-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

            <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/minvalue"/>

            <TextView
            android:id="@+id/tv_min"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
         </LinearLayout>

    <!--Layout to display Maximum value-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

            <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/maxvalue"/>

            <TextView
            android:id="@+id/tv_max"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"/>
        </LinearLayout>

    <!--Layout to display Average value-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

            <TextView
            android:id="@+id/maxTempLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/avgvalue"/>

            <TextView
            android:id="@+id/tv_avg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
        </LinearLayout>

    <!--Button to view the graph-->
        <Button
        android:id="@+id/btn_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/userchoice"/>

        <TextView
        android:id="@+id/tv_axisdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_margin="5dp"
        android:text="@string/axis_text"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="12sp"/>

        <com.jjoe64.graphview.GraphView
        android:id="@+id/gv_graphview"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"/>

        </LinearLayout>

</ScrollView>
